--- a/section4/4.3 HTML Porfolio Project/public/movie-ranking.html
+++ b/section4/4.3 HTML Porfolio Project/public/movie-ranking.html
@@ -3,7 +3,7 @@
 <hr />
 <h3>Spirited Away</h3>
 <p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
+<h3>Interstellar</h3>
+<p>Really cool sci-fi movie. I love the theory of the Black hole and time</p>
 <h3>Drive</h3>
 <p>Super beautiful film. Really artistic.</p>
