--- a/section7/7.3 CSS Flag Project/index.html
+++ b/section7/7.3 CSS Flag Project/index.html
@@ -6,7 +6,39 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    
+    /* red rect */
+    .flag{
+      width: 900px;
+      height: 600px;
+      position: relative;
+      background-color: #CE1126;
+    }
+    /* blue rect */
+    .flag >div{
+      width: 100%;
+      height: 300px;
+      background-color: #002868;
+      position: absolute;
+      top: 150px; 
+    }
+    /* white circle */
+    .flag > div > div{
+      width: 200px;
+      height: 200px;
+      background-color: white;
+      border-radius: 50%;
+      position: absolute;
+      top: 50px;
+      left: 350px;
+    }
+    p{
+      margin: 0;
+      font-size: 5rem;
+      text-align: center;
+    }
+    .flag > p{
+      color: white;
+    }
   </style>
 </head>
 
