--- a/section10/10.3 Mondrian Project/index.html
+++ b/section10/10.3 Mondrian Project/index.html
@@ -19,11 +19,70 @@
     HINT: Remember you can't change the properties of grid lines.
     But grid lines are transparent!
     */
+    .body{
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      margin: 0;
+      height: 100vh;
+      padding: 0;
+    }
+    .container{
+      height: 748px;
+      width: 748px;
+      display: grid;
+      background-color: black;
+      grid-template-columns: 320px 198px 153px 50px;
+      grid-template-rows: 414px 130px 155px 22px;
+      gap: 9px;
+    }
+
+    .box{
+      background-color: #F0F1EC;
+    }
+    .red{
+      background-color: #E72F24;
+    }
+    .white1{
+      grid-column: span 3;
+    }
+    .white2{
+      grid-row: span 2;
+    }
+    .white3{
+      grid-area: 2/ 2/ 4/ 4;
+    }
+    .blue{
+      background-color: #004592;
+      border-bottom: 10px solid black;
+    }
+    .white4{
+      grid-row: span 2;
+    }
+    .yellow{
+      background-color: #F9D01E;
+    }
+    .black{
+      background-color: #232629;
+    }
   </style>
 </head>
 
 <body>
   <!-- Write your HTML here -->
+  <div class="container">
+    <div class="box red"></div>
+    <div class="box white1"></div>
+    <div class="box white2"></div>
+    <div class="box white3"></div>
+
+    <div class="box blue"></div>
+    <div class="box white4"></div>
+
+    <div class="box white5"></div>
+    <div class="box yellow"></div>
+    <div class="box black"></div>
+  </div>
 </body>
 
 </html>
