--- a/section11/11.3 TinDog Project/index.html
+++ b/section11/11.3 TinDog Project/index.html
@@ -100,7 +100,7 @@
   </section>
   <!-- Testimonial -->
   <section id="testimonial">
-    <div class="my-5">
+    <div class="mt-5">
       <div class="p-5 text-center bg-body-tertiary">
         <div class="container py-5">
           <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on
